sphinx_astrorefs/_static/sphinx_astrorefs.css
/* sphinxcontrib.bibtex version 1 */
.bibtex.label {
    margin-top: 0 !important;
    margin: 0 !important;
    border-top: solid 0px !important;
    padding: 0 !important;
    visibility: hidden !important;
}
.bibtex.label > .brackets{
    display:none;
}
/* sphinxcontrib.bibtex version 2 */
.citation > .label {
    margin-top: 0 !important;
    margin: 0 !important;
    border-top: solid 0px !important;
    padding: 0 !important;
    visibility: hidden !important;
    display: none;
}
/* These try to make the citation list look a bit nicer, not too indented */
.citation[role="doc-biblioentry"] {
    display: block !important;
}
.citation > p {
    margin-left: 0.5em !important;
}
.citation > .label > .brackets{
    display:none;
}

